add/retrieve prescription

--- a/doctors.html
+++ b/doctors.html
@@ -122,10 +122,10 @@
                             <div class="doctor-text text-center">
                                 <p>If you are looking at blank cassettes on the web, you may be very confused at the.</p>
                                 <ul class="doctor-icon">
-                                    <li><a href="#"><i class="fa fa-facebook"></i><a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i><a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i><a></li>
-                                    <li><a href="#"><i class="fa fa-pinterest"></i><a></li>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                                 </ul>
                             </div>
                         </div>
